fixed the passcode page adjusting on mobile

--- a/story.html
+++ b/story.html
@@ -138,7 +138,7 @@ a:hover{
 	flex-direction: row;
 	justify-content: center;
 	align-items: stretch;
-	margin: calc(10px + 2vw);
+	margin: calc(16px + 1.5vw);
 	z-index: 1;
 }
 .codeInputBox{
@@ -472,6 +472,7 @@ button[disabled]{
   position: relative;
 	align-items: flex-start;
 	opacity: 0.5;
+	padding: 1vw;
 }
 /* When moving the mouse over the close button */
 .closebtn:hover {
@@ -842,6 +843,12 @@ function crypticBackground(){
   var crypt = document.createElement("div");
   crypt.id = 'cryptic';
   crypt.style.overflow = 'hidden';
+  crypt.style.width = '100vw';
+  crypt.style.height = '100vh';
+  crypt.style.zIndex = '0';
+  crypt.style.left = '0';
+  crypt.style.top='0';
+  crypt.style.position='absolute';
 
   var codePhrase = state.active.variables.passcodePhrase;
   var passcodes = [];
@@ -873,18 +880,21 @@ function crypticBackground(){
     div.style.overflow = 'hidden';
     div.className = currCodeToDisplay;
 
+    var wrapper = document.createElement("div");
+    wrapper.className = 'rCodesWrapper';
     var para = document.createElement("p");
-    para.style.position = 'absolute';
-    para.style.zIndex = '0';
-    para.style.opacity = '0';
-    para.style.overflow = 'hidden';
+    para.className = 'rCodesText';
+    wrapper.style.position = 'absolute';
+    wrapper.style.zIndex = '0';
+    wrapper.style.opacity = '0';
+    wrapper.style.overflow = 'hidden';
 
-    para.style.left = x+'vw';
-    para.style.top = y+'vh';
+    wrapper.style.left = x+'vw';
+    wrapper.style.top = y+'vh';
 
     switch(direction){
       case 0:
-        para.style.animation = 'moveDown '+length+'s infinite';
+        wrapper.style.animation = 'moveDown '+length+'s infinite';
         var newText = innerText[0];
         for(var j=1;j<innerText.length;j++){
           newText += '<br>'+innerText[j];
@@ -892,7 +902,7 @@ function crypticBackground(){
         innerText = newText;
         break;
       case 1:
-        para.style.animation = 'moveUp '+length+'s infinite';
+        wrapper.style.animation = 'moveUp '+length+'s infinite';
         var newText = innerText[0];
         for(var j=1;j<innerText.length;j++){
           newText += '<br>'+innerText[j];
@@ -900,17 +910,18 @@ function crypticBackground(){
         innerText = newText;
         break;
       case 2:
-        para.style.animation = 'moveLeft '+length+'s infinite';
+        wrapper.style.animation = 'moveLeft '+length+'s infinite';
         break;
       case 3:
-        para.style.animation = 'moveRight '+length+'s infinite';
+        wrapper.style.animation = 'moveRight '+length+'s infinite';
         break;
     }
-    para.style.animationDelay = delay+'s';
-    para.style.animationTimingFunction = 'linear';
+    wrapper.style.animationDelay = delay+'s';
+    wrapper.style.animationTimingFunction = 'linear';
+
     para.innerHTML=innerText;
-    //para.style.animation = 'moveDown 15s infinite';
-    div.appendChild(para);
+    wrapper.appendChild(para);
+    div.appendChild(wrapper);
     crypt.appendChild(div);
     //passCryptDict[currCodeToDisplay].push(div);
   }
