--- a/story.html
+++ b/story.html
@@ -291,7 +291,7 @@ a:hover{
 }
 
 .chatScroll{
-  height: 75vh;
+  height: 85vh;
   overflow-y: auto;
   text-align: center;
 }
@@ -492,7 +492,7 @@ button[disabled]{
 
 .manifestoText{
 	font-size: calc(10px + 1.3vw);
-	height: 75vh;
+	height: 80vh;
   overflow-y: auto;
 }
 
@@ -2118,7 +2118,7 @@ setup.checkHangman = function checkHangman(letterString){
 		&lt;&lt;message &quot;J:You&#39;re just here to maul some corporates &amp;#128520&quot;&gt;&gt;
 		&lt;&lt;message &quot;Q:damn right i am&quot;&gt;&gt;
 		&lt;&lt;message &quot;D:sigh I need to separate you two&quot;&gt;&gt;
-		&lt;&lt;message &quot;M:good luck. you&#39;re better off separating yourself &amp;#9996&amp;#128405&quot;&gt;&gt;
+		&lt;&lt;message &quot;M:good luck. you&#39;re better off separating yourself &amp;#x270C&amp;#128405&quot;&gt;&gt;
 		&lt;p class=&quot;chatNotif&quot;&gt;@snakebait has left the chat&lt;/p&gt;
 		&lt;&lt;message &quot;J:lol poor baby got their feelings hurt&quot;&gt;&gt;
 		&lt;&lt;message &quot;D:One of these days you&#39;re going to do something they won&#39;t forgive you for&quot;&gt;&gt;
