fixing line spacing

--- a/story.html
+++ b/story.html
@@ -270,7 +270,6 @@ a:hover{
 
 .chatMessageText{ /*Not working for some reason. set in javascript*/
 	margin: 0;
-	line-height: calc(14px + 0.5vw);
 }
 
 .chatUsernameP{
@@ -1054,7 +1053,8 @@ function revealMessage(scroll, scrollIndex, textIndex, chatNotifWait){
   	messageText.innerHTML = message.substring(2);
     messageText.style.margin = '0';
     messageText.style.wordSpacing = '-.2vw;';
-    messageText.style.lineHeight = 'calc(10px + 0.5vw)';
+    messageText.style.lineHeight = 'calc(15px + 0.5vw)';
+    messageText.style.padding = '0.5vw';
   	toDisplay.style.display = 'flex';
   	updateScroll(document.getElementById('chatScroll'),chatScrollDiff);
   	if(newIndex < scroll.children.length){
