better autoscroll hopefully

--- a/story.html
+++ b/story.html
@@ -642,8 +642,8 @@ var loadingChats = false;
 var chats;
 var numJaxAttempts = 0;
 var fullText=[];
-var chatScrollDiff = 1.05;
-var manifScrollDiff = 1.1;
+var chatScrollDiff = 0.95;
+var manifScrollDiff = 1;
 
 var img = [
   'https://pbs.twimg.com/media/ElNEt_9WMAMZPZ-?format=jpg&name=large',
@@ -2060,6 +2060,7 @@ setup.checkHangman = function checkHangman(letterString){
 &lt;div class=&quot;chatPage&quot;&gt;
   &lt;div class=&quot;chatScroll&quot; id=&quot;chatScroll&quot;&gt;
   	&lt;p class=&quot;chatNotif&quot;&gt;@anonymousbird has entered the chat&lt;/p&gt;
+		&lt;&lt;message &quot;M:good luck. you&#39;re better off separating yourself &amp;#9996&amp;#128405&quot;&gt;&gt;
 		&lt;&lt;message &quot;D:So... what was the point of all this?&quot;&gt;&gt;
 		&lt;&lt;message &quot;M:Jax wanted a powertrip&quot;&gt;&gt;
 		&lt;&lt;message &quot;Q:this is a boring powertrip&quot;&gt;&gt;
@@ -2119,7 +2120,7 @@ setup.checkHangman = function checkHangman(letterString){
 		&lt;&lt;message &quot;J:You&#39;re just here to maul some corporates &amp;#128520&quot;&gt;&gt;
 		&lt;&lt;message &quot;Q:damn right i am&quot;&gt;&gt;
 		&lt;&lt;message &quot;D:sigh I need to separate you two&quot;&gt;&gt;
-		&lt;&lt;message &quot;M:good luck. you&#39;re better off separating yourself &amp;#x270C&amp;#128405&quot;&gt;&gt;
+		&lt;&lt;message &quot;M:good luck. you&#39;re better off separating yourself &amp;#65039&amp;#128405&quot;&gt;&gt;
 		&lt;p class=&quot;chatNotif&quot;&gt;@snakebait has left the chat&lt;/p&gt;
 		&lt;&lt;message &quot;J:lol poor baby got their feelings hurt&quot;&gt;&gt;
 		&lt;&lt;message &quot;D:One of these days you&#39;re going to do something they won&#39;t forgive you for&quot;&gt;&gt;
