update chat text

--- a/story.html
+++ b/story.html
@@ -2061,9 +2061,9 @@ setup.checkHangman = function checkHangman(letterString){
 &lt;div class=&quot;chatPage&quot;&gt;
   &lt;div class=&quot;chatScroll&quot; id=&quot;chatScroll&quot;&gt;
   	&lt;p class=&quot;chatNotif&quot;&gt;@anonymousbird has entered the chat&lt;/p&gt;
-		&lt;&lt;message &quot;M:this was the most obnoxious way to spread a manifesto. great job Jax &amp;#128579&quot;&gt;&gt;
-		&lt;&lt;message &quot;D:I doubt that was the primary purpose of this...&quot;&gt;&gt;
-		&lt;&lt;message &quot;M:you&#39;re probably right. I bet they just wanted a powertrip&quot;&gt;&gt;
+		&lt;&lt;message &quot;M:this was an obnoxious way to spread a manifesto&quot;&gt;&gt;
+		&lt;&lt;message &quot;D:I doubt that was the main purpose of this...&quot;&gt;&gt;
+		&lt;&lt;message &quot;M:I bet they just wanted a powertrip&quot;&gt;&gt;
 		&lt;&lt;message &quot;Q:this is a boring powertrip&quot;&gt;&gt;
 		&lt;&lt;message &quot;J:Maybe to you&quot;&gt;&gt;
 		&lt;&lt;message &quot;M:the hell is that supposed to mean?&quot;&gt;&gt;
