finally fixed the avatar img loading issue. stupid easy fix as usual

--- a/story.html
+++ b/story.html
@@ -193,7 +193,7 @@
 	flex-direction: column;
 
   margin: 2vw;
-	font-size: calc(9px + 1vw);
+	font-size: calc(9px + .8vw);
 }
 
 .option {
@@ -1896,7 +1896,7 @@ function updateBackground(prevPasscode, currPasscode){
 		&lt;/p&gt;
 	&lt;/div&gt;
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="129" name="Passcode" tags="passcode" position="3100,619" size="100,100">&lt;div class=&quot;helper&quot; id=&quot;helper&quot;&gt;
-		&lt;img id=&quot;helperAvatarImg&quot; class=&quot;helperAvatarImg&quot; src=&quot;img/avatar_anon.JPG&quot; alt=&quot;Avatar&quot;&gt;
+		&lt;img id=&quot;helperAvatarImg&quot; class=&quot;helperAvatarImg&quot; alt=&quot;Avatar&quot;&gt;
     &lt;div class=&quot;allHelperText&quot;&gt;
 	  &lt;p class=&quot;chatUsernameP&quot;&gt;&lt;b id=&quot;username&quot;&gt;
 	  &lt;/b&gt;&lt;/p&gt;
