last bugs probs

--- a/story.html
+++ b/story.html
@@ -812,7 +812,7 @@ if (typeof S == "undefined") {
 		currPage: "",
 
     //helper popup messages on the passcode page to help the user
-    initHelper:["D:check it out. they've attracted another one"],
+    initHelper:["T:check it out. they've attracted another one"],
     successHelper:
       [
 				"E:Congrats on your success",
@@ -1017,7 +1017,7 @@ if (typeof S == "undefined") {
 			"M:And you're being excessive. Show some restraint.",
 			"J:&#128527 You're just jealous I'm not flirting with you anymore",
 			"M:We weren't. Fucking. Flirting.",
-			"J:Weren't me?",
+			"J:Weren't we?",
 			"M:I'm going to kill you if you don't shut up.",
 			"J:Now, now, Eikura, you know how flustered I get when you threaten my life...",
 		  "@snakebait has left the chat room",
@@ -1031,8 +1031,8 @@ if (typeof S == "undefined") {
 			"E:I love you too",
 			"K:bleh",
 			"T:Yeah, that's strike three for you",
-			"J:What?! Ily's don't count as flirting",
-			"E:Respect the space, hera. We can say it all you want tonight",
+			"J:What?! Ily's don't count as flirting!",
+			"E:Respect the space, hera. You can say it all you want tonight",
 			"@nightemissary has left the chat room",
 			"J:Aww, now both my loves got scared away",
 			"T:dont let Mouse hear you calling them that",
@@ -1564,13 +1564,13 @@ function revealHelper(helperText, nextMessage){
 			document.getElementById('helper').style.backgroundColor = '#4E4256';
 			break;
 		//Teika #425653
-		case 'D':
+		case 'T':
 			document.getElementById('username').innerHTML = '@cyborgrip';
 			document.getElementById('helperAvatarImg').src = S.img['TEI'];
 			document.getElementById('helper').style.backgroundColor = '#425653';
 			break;
 		//Kiko #56424B
-		case 'Q':
+		case 'K':
 			document.getElementById('username').innerHTML = '@calikilly';
 			document.getElementById('helperAvatarImg').src = S.img['KIK'];
 			document.getElementById('helper').style.backgroundColor = '#56424B';
@@ -1915,7 +1915,7 @@ function updateBackground(prevPasscode, currPasscode){
 		Finally, you strategize to deplatform, defund, and dethrone the reigning corporation.
 		&lt;br&gt;&lt;br&gt;
 
-		So that&#39;s what we did, and soon we will collectively overhaul all hierarchy and worth-politics.
+		So that&#39;s what we did, and soon, we will collectively overhaul all hierarchy and worth-politics.
 		&lt;br&gt;&lt;br&gt;
 
 		There are those who attack, those who defend, those who provide,
