--- a/story.html
+++ b/story.html
@@ -99,6 +99,8 @@
 /*below loading animation adapted from https://codepen.io/typ90/pen/vgEbvN*/
 .loader {
     text-align: center;
+		opacity:1;
+		display: block;
 }
 .loader span {
     display: inline-block;
@@ -499,6 +501,8 @@ function revealMessage(scroll, textIndex){
   var notifEl = document.getElementById('chatNotif').cloneNode(true);
   var loading = document.getElementById('loading');
 
+
+
   var toDisplay = S.messageArray[textIndex];
   //var newIndex = scrollIndex+1;
   if(toDisplay.charAt(0) == "@"){ //if chat notif
@@ -570,8 +574,14 @@ function revealMessage(scroll, textIndex){
     //scroll.replaceChild(messageEl,loading);
     //scroll.appendChild(loading);
     updateScroll(document.getElementById('chatScroll'),S.chatScrollDiff);
-    var waitTime = calcWaitTime(toDisplay.length);
-    loading.style.display='block';
+    loading.style.opacity=1;
+    var length1;
+    if(textIndex == 0){
+      length1 = 0;
+    }else{
+      length1 = S.messageArray[textIndex-1].length;
+    }
+    var waitTime = calcWaitTime(length1);
     S.waiting = setTimeout(showMessageText, waitTime, messageEl, messageText, loading, textIndex, scroll);
 
   }
@@ -580,15 +590,17 @@ function revealMessage(scroll, textIndex){
 
 function calcWaitTime(givenLength){
   var mLen = givenLength;
-  if(mLen < 20){
-    mLen = 20;
+  if(mLen == 0){
+    mLen = 5;
+  }else if(mLen < 30){
+    mLen = 30;
   }
-  return Math.floor(Math.random() * ((mLen*40+500) - mLen*40) + mLen*30);
+  return Math.floor(Math.random() * ((mLen*40+500) - mLen*40) + mLen*25);
 }
 
 function showMessageText(messEl,textEl, loadingEl, textIndex, scroll){
   scroll.appendChild(messEl);
-  loadingEl.style.display = 'none';
+  loadingEl.style.opacity = 0;
   messEl.style.display='flex';
   updateScroll(document.getElementById('chatScroll'),S.chatScrollDiff);
   textEl.innerHTML = S.messageArray[textIndex].substring(2);
@@ -835,7 +847,7 @@ if (typeof S == "undefined") {
 				"E:Don't worry. They don't hold a grudge. You can always try again",
         "K:pisssed em off XD"
       ],
-    chatHelper: "J:You just found the biggest secret. are you satisfied?",
+    chatHelper: "J:You just found the biggest secret. Are you satisfied?",
 		rumpleHelper: "J:Your move, little bird. Give it thrice",
 
     // global counters for the helper popup message arrays above
@@ -940,7 +952,7 @@ if (typeof S == "undefined") {
 		  "M:**Comrades. At best.",
 		  "T:ouch",
 		  "J:Damn, this little mouse bites &#128556 You show those teeth to your followers?",
-		  "M:I don't need to waste my charisma on you &#128405. Do you even care about radicalizing these people?",
+		  "M:I don't need to waste my charisma on you &#128405 Do you even care about radicalizing these people?",
 		  "J:I thought that was your job &#128533",
 		  "T:It's all our jobs. That's kind of the point?",
 			"E:We're comrades :)",
@@ -961,7 +973,7 @@ if (typeof S == "undefined") {
 			"T:can you guys flirt in a private chat, please?",
 			"M:We're not fucking flirting.",
 			"T:uh huh",
-			"E:J, you were going to perform a friendly demonstration?",
+			"E:J, you were going to show us something?",
 			"J:Oh right! But I'm going to need an assistant...",
 			"M:I told you what would happen if you ever got into my feeds again.",
 		  "J:Oh I'd never dream of it, Eikura. I was gonna show on Teika &#128527",
@@ -996,13 +1008,13 @@ if (typeof S == "undefined") {
 			"E:Did you fix it?",
 			"T:please, I can't debug that fast. I just broke their link",
 		  "J:Come on, Teika &#128553 You're spoiling the fun &#128548",
-		  "T:harassing me like this is not 'fun'",
+		  "T:harassing me is not 'fun'",
 		  "J:Isn't it though? &#128527",
 		  "K:lol",
-			"E: Hera...",
+			"E:J...",
 			"J:Sorry, sorry, it was funny though &#129315 Shoulda seen the look on their face",
 			"E:I saw, hera. I'm sitting right next to them",
-			"M:J, you're not there with them today?",
+			"M:You're not there with them today?",
 			"J:Nah, I had some shit to get done for blackout, but I always spare a feed to keep on eye on you guys &#128521",
 			"E:That's what we get for living in a surveillance state",
 		  "M:Invasive prick.",
@@ -1011,12 +1023,13 @@ if (typeof S == "undefined") {
 			"E:Speaking of, are you coming home tonight?",
 			"J:I can! If you want me to &#129392",
 			"E:I always want you to <3",
-			"J:&#128525&#129392&#128536 I'll be back before you know it",
+			"J:&#128525&#129402&#128536 I'll be back then &#129392",
+			"J:&#128536&#128536&#128536",
 			"T:what did I say about flirting?",
 			"J:But they're being cute &#129402",
 			"M:And you're being excessive. Show some restraint.",
 			"J:&#128527 You're just jealous I'm not flirting with you anymore",
-			"M:We weren't. Fucking. Flirting.",
+			"M:We Weren't. Fucking. Flirting.",
 			"J:Weren't we?",
 			"M:I'm going to kill you if you don't shut up.",
 			"J:Now, now, Eikura, you know how flustered I get when you threaten my life...",
@@ -1024,7 +1037,7 @@ if (typeof S == "undefined") {
 		  "J:No, wait, come back!",
 			"E:I really don't know what you were expecting",
 			"J:I was just playing around!",
-		  "T:playing with fire, more like. it's a wonder they put up with you",
+		  "T:and playing with fire. it's a wonder they put up with you",
 		  "J:Psh, please, I'm too cute to stay mad at",
 			"E:Sigh don't I know it",
 			"J:Love you, hera &#128536",
@@ -1032,7 +1045,7 @@ if (typeof S == "undefined") {
 			"K:bleh",
 			"T:Yeah, that's strike three for you",
 			"J:What?! Ily's don't count as flirting!",
-			"E:Respect the space, hera. You can say it all you want tonight",
+			"E:Haha respect the space, hera. We can keep it private <3",
 			"@nightemissary has left the chat room",
 			"J:Aww, now both my loves got scared away",
 			"T:dont let Mouse hear you calling them that",
